--- a/ayyappa.html
+++ b/ayyappa.html
@@ -18,12 +18,15 @@
 				</ul>
 			</nav><div class="center">
                 <ul>
-					<li><a href="./Ayyappa 01.zip" download> Ayyappa 01</li>
-					<li><a href="./Ayyappa 02.zip">Ayyappa 02</a></li>
-					<li><a href="./Ayyappa 03.zip">Ayyappa 03</a></li>
-					<li><a href="./Ayyappa 05 (1).zip">Ayyappa 04</a></li>
-					<li><a href="./Ayyappa 05.zip">Ayyappa 05</a></li>
-                    <li><a href="./Ayyappan-06.zip">Ayyappa 06</a></li>
+					<li><a href="./01AanayirangumMaamalayil.zip" download> Ayyappa 01</li>
+					<li><a href="./02UdichuyarnnuMamalamele.zip" download>Ayyappa 02</a></li>
+					<li><a href="./03-SwamiSangeetham.zip" download>Ayyappa 04</a></li>
+					<li><a href="./05ThirunamamOnnuVilichal.zip" download>Ayyappa 05</a></li>
+			         	<li><a href="./06VrischikaPularvela.zip" download>Ayyappa 06</a></li>
+					<li><a href="./07MahishiyeSamsara.zip" download>Ayyappa 07</a></li>
+					<li><a href="./08MandaramMalarmazha.zip" download>Ayyappa 08</a></li>
+					<li><a href="./09-MakaraSankrama.zip" download>Ayyappa 09</a></li>
+					<li><a href="./10SooryanumChandranum.zip" download>Ayyappa 10</a></li>
 				</ul>
             </div>
 </body>
