--- a/ayyappa.html
+++ b/ayyappa.html
@@ -16,7 +16,8 @@
 					<li><a href="./service.html">Services</a></li>
 				
 				</ul>
-			</nav><div class="center">
+			</nav>
+		<div class="center">
                 <ul>
 					<li><a href="./01AanayirangumMaamalayil.zip" download> Ayyappa 01</li>
 					<li><a href="./02UdichuyarnnuMamalamele.zip" download>Ayyappa 02</a></li>
@@ -27,7 +28,7 @@
 					<li><a href="./08MandaramMalarmazha.zip" download>Ayyappa 08</a></li>
 					<li><a href="./09-MakaraSankrama.zip" download>Ayyappa 09</a></li>
 					<li><a href="./10SooryanumChandranum.zip" download>Ayyappa 10</a></li>
-				</ul>
+		</ul>
             </div>
 </body>
 </html>
